objects/Product2.object
<CustomObject>
    <fields>
        <fullName>PC_Brand_Name__c</fullName>
        <description>Manufacture Brand that the product is associated with.</description>
        <label>Brand Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_CPT_Codes__c</fullName>
        <label>CPT Codes</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>96372</fullName>
                    <label>96372: therapeutic, prophylactic, or diagnostic injection</label>
                </value>
                <value>
                    <fullName>J3490</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_Form__c</fullName>
        <description>Form of the drug. Injection, Solution, Pill.</description>
        <label>Form</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Manufacturer__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>lookup to the manufacturer account the product is associated to</description>
        <label>Manufacturer</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>Manufacturer does not exist. Please select a valid Manufacturer account.</errorMessage>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Manufacturer</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Franchise</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PC_NDC__c</fullName>
        <description>National Drug Code, is a universal product identifier for human drugs in the United States</description>
        <label>NDC</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_PreferredShipmentRole__c</fullName>
        <label>Preferred Shipment Role</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Patient</fullName>
                </value>
                <value>
                    <fullName>Physician</fullName>
                </value>
                <value>
                    <fullName>Treating Physician</fullName>
                </value>
                <value>
                    <fullName>Payer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_Strength__c</fullName>
        <description>Strength of the Drug / Product</description>
        <label>Strength</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Unit_of_Measure_Code__c</fullName>
        <description>Holds unit of measure code for the drug</description>
        <label>Unit of Measure Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>